fix: spacing padding/margin

--- a/src/modules/banner/styles.module.scss
+++ b/src/modules/banner/styles.module.scss
@@ -1,6 +1,6 @@
 .bannerContainer {
   background-color: #d7c1c1;
-  min-height: 10vh;
+  min-height: 8vh;
 
   p {
     margin: 0;
